# AMSS-Backend

./: .gitignore  LICENSE  Person.cpp  README.md  Team 4.sln  Team 4.vcxproj  Team 4.vcxproj.filters  test
headers/: FaceDB.h  IndexSearch.cpp  IndexSearch.h  Person.h  ValidateData.cpp  ValidateData.h  Verificar.cpp  test_knnsearch.cpp  test_knnsearch.h
libbson-1.7.0/: ChangeLog  Makefile  bcon-col-view  bcon-speed  bson-metrics  bson-streaming-reader  bson-to-json  bson-validate  config.status  json-to-bson  libtool  test-libbson
libbson-1.7.0/.libs/: bcon-col-view  bcon-speed  bson-metrics  bson-streaming-reader  bson-to-json  bson-validate  json-to-bson  test-libbson
libbson-1.7.0/examples/.deps/: bcon_col_view-bcon-col-view.Po  bcon_speed-bcon-speed.Po  bson_metrics-bson-metrics.Po  bson_streaming_reader-bson-streaming-reader.Po  bson_to_json-bson-to-json.Po  bson_validate-bson-validate.Po  json_to_bson-json-to-bson.Po
libbson-1.7.0/src/: libbson-1.0.pc  libbson-static-1.0.pc
libbson-1.7.0/src/bson/: bson-stdint.h
libbson-1.7.0/src/bson/.deps/: libbson_la-bcon.Plo  libbson_la-bson-atomic.Plo  libbson_la-bson-clock.Plo  libbson_la-bson-context.Plo  libbson_la-bson-decimal128.Plo  libbson_la-bson-error.Plo  libbson_la-bson-iso8601.Plo  libbson_la-bson-iter.Plo  libbson_la-bson-json.Plo  libbson_la-bson-keys.Plo  libbson_la-bson-md5.Plo  libbson_la-bson-memory.Plo  libbson_la-bson-oid.Plo  libbson_la-bson-reader.Plo  libbson_la-bson-string.Plo  libbson_la-bson-timegm.Plo  libbson_la-bson-utf8.Plo  libbson_la-bson-value.Plo  libbson_la-bson-version-functions.Plo  libbson_la-bson-writer.Plo  libbson_la-bson.Plo
libbson-1.7.0/src/jsonsl/.deps/: libbson_la-jsonsl.Plo
libbson-1.7.0/tests/.deps/: test_libbson-TestSuite.Po  test_libbson-corpus-test.Po  test_libbson-json-test.Po  test_libbson-test-atomic.Po  test_libbson-test-bcon-basic.Po  test_libbson-test-bcon-extract.Po  test_libbson-test-bson-corpus.Po  test_libbson-test-bson.Po  test_libbson-test-clock.Po  test_libbson-test-decimal128.Po  test_libbson-test-endian.Po  test_libbson-test-error.Po  test_libbson-test-iso8601.Po  test_libbson-test-iter.Po  test_libbson-test-json.Po  test_libbson-test-libbson.Po  test_libbson-test-oid.Po  test_libbson-test-reader.Po  test_libbson-test-string.Po  test_libbson-test-utf8.Po  test_libbson-test-value.Po  test_libbson-test-version.Po  test_libbson-test-writer.Po
sources/: CMakeLists.txt  FaceDB.cpp  IndexSearch.cpp  ValidateData.cpp  main  main.cpp  runtest.txt  test  test.cpp  utils.cpp
testFolder/: Apellidos.txt  Genero.txt  Matriculas.txt  edades.txt  fullDB  fullDB.cpp
testFoulder/: MetodoImagenes.cpp  Nombres.txt  fullDB  fullDB.cpp
